--- a/files/cv/cv.tex
+++ b/files/cv/cv.tex
@@ -19,7 +19,7 @@ and fluids at interfaces}}}
 	\begin{flushright}
 \textbf{LIPhy}\\
 \textcolor{new_gray1}{Grenoble, France\\
-\href{mailto:sgravelle@icp.uni-stuttgart.de}{{\color{blue_1}\nolinkurl{sgravelle@icp.uni-stuttgart.de}}}\\
+\href{mailto:simon.gravelle@univ-grenoble-alpes.fr}{{\color{blue_1}\nolinkurl{simon.gravelle@univ-grenoble-alpes.fr}}}\\
 \href{https://simongravelle.github.io}{\color{blue_1}\nolinkurl{{https://simongravelle.github.io}}}\\
 }
 	\end{flushright}
