deploy: ff407f67112dcc26b5c7658b0d3dbdff7eb2e1b9

--- a/files/cv/cv.tex
+++ b/files/cv/cv.tex
@@ -36,7 +36,11 @@ and fluids at interfaces}}}
 \vspace{-0.2cm}
 \begin{table}[htbp]
 \begin{tabular}{@{} p{0.12\linewidth} p{0.84\linewidth} @{}}
-\`2023-today  & Postdoctoral Researcher (MSCA) \\
+\`2024-today  & CNRS Researcher \\
+& Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, \hone{Grenoble, France} \\
+& \textit{{\color{blue_1}Nanoconfined fluids, soft matter, and molecular simulations}} \\
+& Team: Statistical Physics and Modeling \\
+\`2023-2024  & Postdoctoral Researcher (MSCA) \\
 & Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, \hone{Grenoble, France} \\
 & \textit{{\color{blue_1}Hybrid nanoporous materials for fluid mixture separation}} \\
 & Group leader: CNRS DR Benoit Coasne \\
@@ -67,7 +71,7 @@ and fluids at interfaces}}}
 \end{tabular}
 \end{table}
 
-\vspace{1cm}
+\newpage
 
 \noindent\begin{minipage}{0.135\linewidth}
 {\color{gray120}\rule{\textwidth}{0.22cm}\relax}
