--- a/static/files/cv/cv.tex
+++ b/static/files/cv/cv.tex
@@ -19,8 +19,8 @@ and fluids at interfaces}}}
 	\begin{flushright}
 \textbf{LIPhy}\\
 \textcolor{new_gray1}{Grenoble, France\\
-\href{mailto:simon.gravelle@univ-grenoble-alpes.fr}{{\color{blue_1}\nolinkurl{simon.gravelle@univ-grenoble-alpes.fr}}}\\
-\href{https://simongravelle.github.io}{\color{blue_1}\nolinkurl{{https://simongravelle.github.io}}}\\
+\href{mailto:simon.gravelle@cnrs.fr}{{\color{blue_1}\nolinkurl{simon.gravelle@cnrs.fr}}}\\
+\href{https://simongravelle.github.io}{\color{blue_1}\nolinkurl{{simongravelle.github.io}}}\\
 }
 	\end{flushright}
 \end{minipage}
@@ -40,7 +40,8 @@ and fluids at interfaces}}}
 & Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, \hone{Grenoble, France} \\
 & \textit{{\color{blue_1}Nanoconfined fluids, soft matter, and molecular simulations}} \\
 & Team: Statistical Physics and Modeling \\
-\`2023-2024  & Postdoctoral Researcher (MSCA) \\
+\hline \hline
+\`2023-2025  & MSCA Fellow \\
 & Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, \hone{Grenoble, France} \\
 & \textit{{\color{blue_1}Hybrid nanoporous materials for fluid mixture separation}} \\
 & Group leader: CNRS DR Benoit Coasne \\
@@ -94,8 +95,6 @@ and fluids at interfaces}}}
 \end{tabular}
 \end{table}
 
-\newpage
-
 \vspace{0.2cm}
 
 \noindent\begin{minipage}{0.274\linewidth}
@@ -137,6 +136,8 @@ to the launch of several collaborations} \\
 & & \href{https://lammpstutorials.github.io}{{\color{gray120}https://lammpstutorials.github.io}}\\
 \end{tabular}
 \end{table}
+
+\newpage
 
 \vspace{0.5cm}
 
@@ -203,6 +204,17 @@ Other & Outreach, Open science, Tutoring, Video production \\
 
 \begin{table}[h!]
 \begin{tabular}{@{} p{0.13\linewidth} p{0.84\linewidth} @{}}
+\hline \hline
+02/2024 &  \hone{Modeling workshop in Cermav}, Grenoble, France  \\ % the 23th
+& \textit{\color{blue_1}Modelling fluid transport in porous materials: connecting nanoscale and macroscale} \\ 
+\hline \hline
+10/2024 &  \hone{French/German Adsorption Conference}, Strasbourg, France  \\ % the 24th
+& \textit{\color{blue_1}Separation of water and ethanol mixtures by nanoporous organosilica;
+a molecular dynamics study} \\ 
+\hline \hline
+10/2023 &  \hone{Invited seminar}, Kyung Hee University, Korea  \\ % (the 17th)
+& \textit{\color{blue_1}Using simulations to design nanoporous materials for the separation of fluids} \\ 
+\hline \hline
 06/2022  & \hone{International Society for Porous Media (InterPore),}  online \\ 
 & \textit{\color{blue_1}Water confined in salt crusts : insights from molecular simulations} \\
 \hline \hline
@@ -226,11 +238,7 @@ molecules in shear flow} \\
 Washington, États-Unis \\ 
 & \textit{\color{blue_1}Liquid phase exfoliation of graphene : a molecular dynamics investigation} \\
 \hline \hline
-%\end{tabular}
-%\end{table}
-%\begin{table}[h!]
-%\begin{tabular}{@{} p{0.13\linewidth} p{0.84\linewidth} @{}}
-10/2018  & \hone{GdR Liquides aux interfaces,} Bordeaux, France \\ 
+    10/2018  & \hone{GdR Liquides aux interfaces,} Bordeaux, France \\ 
 & \textit{\color{blue_1}Design of a unidirectional water valve in \textit{Tillandsia}} \\
 \hline \hline
 05/2018  & \hone{Séminaire invité,} LIPhy, Grenoble, France \\ 
@@ -248,6 +256,12 @@ nanochannels} \\
 12/2014  & \hone{Computer Simulation of Combined Fluids,} Londres, Royaume-Uni \\ 
 & \textit{\color{blue_1}Optimizing water permeability through the hourglass shape of aquaporins : From
 hydrodynamics to single-file transport} \\
+
+\end{tabular}
+\end{table}
+\begin{table}[h!]
+\begin{tabular}{@{} p{0.13\linewidth} p{0.84\linewidth} @{}}
+
 \hline \hline
 10/2014  & \hone{GdR Liquides aux interfaces,} Bordeaux, France \\ 
 & \textit{\color{blue_1}Pink noise of ionic current, theory and modelisation} \\
