--- a/static/files/cv/cv.tex
+++ b/static/files/cv/cv.tex
@@ -215,6 +215,9 @@ a molecular dynamics study} \\
 10/2023 &  \hone{Invited seminar}, Kyung Hee University, Korea  \\ % (the 17th)
 & \textit{\color{blue_1}Using simulations to design nanoporous materials for the separation of fluids} \\ 
 \hline \hline
+09/2023 &  \hone{Thematic School in Soft Nanosciences}, Grenoble, France \\ % (the 23th)
+& \textit{\color{blue_1}Using molecular simulations to design nanoporous materials for the separation or fluids} \\ 
+\hline \hline
 06/2022  & \hone{International Society for Porous Media (InterPore),}  online \\ 
 & \textit{\color{blue_1}Water confined in salt crusts : insights from molecular simulations} \\
 \hline \hline
