--- a/static/files/cv/cv.tex
+++ b/static/files/cv/cv.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper,11pt]{concours}
+\usepackage{eurosym}
 
 %\input{../shared/parameters1.tex}
 \input{parameters.tex}
@@ -17,7 +18,7 @@ and fluids at interfaces}}}
 \end{minipage}
 \begin{minipage}{0.442\linewidth} 
 	\begin{flushright}
-\textbf{LIPhy}\\
+\textbf{LIPhy} (UGA \& CNRS)\\
 \textcolor{new_gray1}{Grenoble, France\\
 \href{mailto:simon.gravelle@cnrs.fr}{{\color{blue_1}\nolinkurl{simon.gravelle@cnrs.fr}}}\\
 \href{https://simongravelle.github.io}{\color{blue_1}\nolinkurl{{simongravelle.github.io}}}\\
@@ -31,40 +32,55 @@ and fluids at interfaces}}}
 {\color{gray120}\rule{\textwidth}{0.22cm}\relax}
 \end{minipage}
 \begin{minipage}{0.82\linewidth}
-{\textcolor{gray120}{\huge Research experience}}
+{\textcolor{gray120}{\huge Current research position}}
 \end{minipage}
 \vspace{-0.2cm}
 \begin{table}[htbp]
 \begin{tabular}{@{} p{0.12\linewidth} p{0.84\linewidth} @{}}
 \`2024-today  & CNRS Researcher \\
-& Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, \hone{Grenoble, France} \\
+& Université Grenoble Alpes, CNRS, LIPhy, \hone{Grenoble, France} \\
 & \textit{{\color{blue_1}Nanoconfined fluids, soft matter, and molecular simulations}} \\
 & Team: Statistical Physics and Modeling \\
+& \hspace{0.2cm} $\bullet$ Since January 2024: in charge of organizing LIPhy's internal seminars \\
+& \hspace{0.2cm} $\bullet$ Since April 2024: co-supervision of Pablo Grisanti, PhD candidate \\
 \hline \hline
-\`2023-2025  & MSCA Fellow \\
-& Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, \hone{Grenoble, France} \\
+\`2023-today  & MSCA Fellow \\
+& Université Grenoble Alpes, CNRS, LIPhy, \hone{Grenoble, France} \\
 & \textit{{\color{blue_1}Hybrid nanoporous materials for fluid mixture separation}} \\
 & Group leader: CNRS DR Benoit Coasne \\
-\hline \hline
+\end{tabular}
+\end{table}
+
+\vspace{0.5cm}
+
+\noindent\begin{minipage}{0.135\linewidth}
+{\color{gray120}\rule{\textwidth}{0.22cm}\relax}
+\end{minipage}
+\begin{minipage}{0.82\linewidth}
+{\textcolor{gray120}{\huge Past research experiences}}
+\end{minipage}
+\vspace{-0.2cm}
+\begin{table}[htbp]
+\begin{tabular}{@{} p{0.12\linewidth} p{0.84\linewidth} @{}}
 2021-2023  & Postdoctoral Researcher \\
 & Institute for Computational Physics, Universität Stuttgart, \hone{Stuttgart, Allemagne} \\
 & \textit{{\color{blue_1}NMR properties of water at the interfaces of porous salt crusts }} \\
 & \textit{{\color{blue_1}NMR dynamics of hydrophilic gels and polymers}} \\
 & Group leaders: Pr. Christian Holm and Assistant Pr. Alexander Schlaich \\
 \hline \hline
- 2019-2021  & Postdoctoral Researcher \\
+    2019-2021  & Postdoctoral Researcher \\
 & Queen Mary University of London, \hone{Londres, Royaume-Uni} \\
 & \textit{{\color{blue_1}Adsorption of two-dimensional nanoparticles at fluid interfaces }} \\
 & \textit{{\color{blue_1}Viscosity of graphene nanoparticle suspensions under shear}} \\
 & Group leader: Pr. Lorenzo Botto \\
 \hline \hline
- 2016-2019  & Postdoctoral Researcher (FONDECYT) \\
+    2016-2019  & Postdoctoral Researcher (FONDECYT) \\
 & Universidad Adolfo Ibáñez, \hone{Viña del Mar, Chili} \\
 & \textit{{\color{blue_1}Bio-inspired water capture systems by desert plants}}\\
 & \textit{{\color{blue_1}Modeling microtube dynamics in plant cells}}\\
 & Group leaders: Pr. Jacques Dumais \\
 \hline \hline
- 2012-2015  & Doctorant  \\
+    2012-2015  & Doctorant  \\
 & Institut Lumière Matière, Université Claude Bernard Lyon 1, \hone{Lyon, France} \\
 & \textit{{\color{blue_1}Fluidic transport in bio-inspired nano-channels}} \\
 & \textit{{\color{blue_1}Charge fluctuations and reversible ion adsorption in synthetic nanopores}} \\
@@ -73,6 +89,22 @@ and fluids at interfaces}}}
 \end{table}
 
 \newpage
+
+
+\noindent\begin{minipage}{0.135\linewidth}
+{\color{gray120}\rule{\textwidth}{0.22cm}\relax}
+\end{minipage}
+\begin{minipage}{0.82\linewidth}
+{\textcolor{gray120}{\huge Publication list}}
+\end{minipage}
+\vspace{-0.2cm}
+\begin{table}[htbp]
+\begin{tabular}{@{} p{0.12\linewidth} p{0.84\linewidth} @{}}
+\href{https://scholar.google.fr/citations?user=9fD2JlYAAAAJ&hl}{Scholar}  & My \hone{full publication list} is available from \href{https://scholar.google.fr/citations?user=9fD2JlYAAAAJ&hl}{Google Scholar}. \\
+\end{tabular}
+\end{table}
+
+\vspace{2.2cm}
 
 \noindent\begin{minipage}{0.135\linewidth}
 {\color{gray120}\rule{\textwidth}{0.22cm}\relax}
@@ -86,16 +118,16 @@ and fluids at interfaces}}}
 2023  & \hone{\textit{Marie Skłodowska-Curie Actions} fellowship (MSCA)} \\
 & Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, Grenoble, France \\
 & \textit{{\color{blue_1}Hybrid nanoporous materials for the separation of fluid mixtures}} \\
-& Total duration of 2 years + approximately 20000 euros research budget\\
+& Duration of 2 years, research budget of 24000 \euro{}\\
 \hline \hline
-2017  & Bourse postdoctorale \hone{FONDECYT-CONICYT} \\
+2017  & Postdoctoral fellowship \hone{FONDECYT-CONICYT} \\
 & Universidad Adolfo Ibáñez, Viña del Mar, Chili \\
 & \textit{{\color{blue_1}A biomimetic membrane with highly asymmetric water transport properties}} \\
-& Duration of 3 years + approximately 15000 euros research budget\\
+& Duration of 3 years, research budget of 15000 \euro{} \\
 \end{tabular}
 \end{table}
 
-\vspace{0.2cm}
+\vspace{2.2cm}
 
 \noindent\begin{minipage}{0.274\linewidth}
 {\color{gray120}\rule{\textwidth}{0.22cm}\relax}
@@ -108,7 +140,7 @@ and fluids at interfaces}}}
 \begin{tabular}{@{} p{0.024\linewidth} p{0.2\linewidth} p{0.575\linewidth} @{}}
 \href{https://maicos-analysis.org}{~[1]} &  
 \hone{MAICoS} & 
-Co-developer of a software allowing the analysis of the structure of confined and interfacial fluid systems from molecular
+Co-developer of software allowing the analysis of the structure of confined and interfacial fluid systems from molecular
 simulations \\
 %& & \textit{\color{blue_1} Note: participer \`a ce projet collaboratif m'a permis
 %de progresser en programmation, communication et organisation} \\
@@ -154,7 +186,7 @@ Simulation & Molecular dynamics \\
 moléculaire      & Monte Carlo approach \\ 
       & Free energy method (\textit{Umbrella sampling}) \\
 \hline \hline
-Other     & Finite element metho \\
+Other     & Finite element method \\
       & NMR relaxation time measurements \\
 \hline \hline
 Experimental & Fluorescence correlation spectroscopy (FCS) \\
