--- a/files/cv/cv.tex
+++ b/files/cv/cv.tex
@@ -41,10 +41,11 @@ and fluids at interfaces}}}
 & Université Grenoble Alpes, CNRS, LIPhy, \hone{Grenoble, France} \\
 & \textit{{\color{blue_1}Nanoconfined fluids, soft matter, and molecular simulations}} \\
 & Team: Statistical Physics and Modeling \\
+& \hspace{0.2cm} $\bullet$ starting fall of 2024: lead PI of the ANR JCJC project MicroSep \\
 & \hspace{0.2cm} $\bullet$ Since January 2024: in charge of organizing LIPhy's internal seminars \\
 & \hspace{0.2cm} $\bullet$ Since April 2024: co-supervision of Pablo Grisanti, PhD candidate \\
 \hline \hline
-\`2023-today  & MSCA Fellow \\
+\`2023-2025  & MSCA Fellow \\
 & Université Grenoble Alpes, CNRS, LIPhy, \hone{Grenoble, France} \\
 & \textit{{\color{blue_1}Hybrid nanoporous materials for fluid mixture separation}} \\
 & Group leader: CNRS DR Benoit Coasne \\
@@ -115,7 +116,13 @@ and fluids at interfaces}}}
 \vspace{-0.2cm}
 \begin{table}[htbp]
 \begin{tabular}{@{} p{0.12\linewidth} p{0.84\linewidth} @{}}
-2023  & \hone{\textit{Marie Skłodowska-Curie Actions} fellowship (MSCA)} \\
+2024  & \hone{JCJC project} (ANR) \\
+& Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, Grenoble, France \\
+& \textit{{\color{blue_1}Polymères microporeux pour la séparation de mixtures fluides : connecter les échelles moléculaire et
+macroscopiques}} \\
+& Duration of 4 years, research budget of 330000 \euro{}\\
+\hline \hline
+2023  & \hone{\textit{Marie Skłodowska-Curie Actions}} fellowship (MSCA) \\
 & Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, Grenoble, France \\
 & \textit{{\color{blue_1}Hybrid nanoporous materials for the separation of fluid mixtures}} \\
 & Duration of 2 years, research budget of 24000 \euro{}\\
