--- a/static/files/cv/cv.tex
+++ b/static/files/cv/cv.tex
@@ -18,7 +18,7 @@ and fluids at interfaces}}}
 \end{minipage}
 \begin{minipage}{0.442\linewidth} 
 	\begin{flushright}
-\textbf{LIPhy} (UGA \& CNRS)\\
+\textbf{LIPhy, UGA, CNRS}\\
 \textcolor{new_gray1}{Grenoble, France\\
 \href{mailto:simon.gravelle@cnrs.fr}{{\color{blue_1}\nolinkurl{simon.gravelle@cnrs.fr}}}\\
 \href{https://simongravelle.github.io}{\color{blue_1}\nolinkurl{{simongravelle.github.io}}}\\
@@ -37,16 +37,17 @@ and fluids at interfaces}}}
 \vspace{-0.2cm}
 \begin{table}[htbp]
 \begin{tabular}{@{} p{0.12\linewidth} p{0.84\linewidth} @{}}
-\`2024-today  & CNRS Researcher \\
-& Université Grenoble Alpes, CNRS, LIPhy, \hone{Grenoble, France} \\
+2024-today  & \hone{CNRS Researcher} \\
+& Univ. Grenoble Alpes, CNRS, LIPhy, Grenoble, France \\
 & \textit{{\color{blue_1}Nanoconfined fluids, soft matter, and molecular simulations}} \\
-& Team: Statistical Physics and Modeling \\
-& \hspace{0.2cm} $\bullet$ starting fall of 2024: lead PI of the ANR JCJC project MicroSep \\
+& Team: Statistical Physics and Modeling (PSM) \\
+& \hspace{0.2cm} $\bullet$ Starting October 2024: lead PI of the ANR project MicroSep \\
 & \hspace{0.2cm} $\bullet$ Since January 2024: in charge of organizing LIPhy's internal seminars \\
 & \hspace{0.2cm} $\bullet$ Since April 2024: co-supervision of Pablo Grisanti, PhD candidate \\
+
 \hline \hline
-\`2023-2025  & MSCA Fellow \\
-& Université Grenoble Alpes, CNRS, LIPhy, \hone{Grenoble, France} \\
+2023-2025  & \hone{MSCA Fellow} \\
+& Univ. Grenoble Alpes, CNRS, LIPhy, Grenoble, France \\
 & \textit{{\color{blue_1}Hybrid nanoporous materials for fluid mixture separation}} \\
 & Group leader: CNRS DR Benoit Coasne \\
 \end{tabular}
@@ -91,7 +92,6 @@ and fluids at interfaces}}}
 
 \newpage
 
-
 \noindent\begin{minipage}{0.135\linewidth}
 {\color{gray120}\rule{\textwidth}{0.22cm}\relax}
 \end{minipage}
@@ -101,7 +101,8 @@ and fluids at interfaces}}}
 \vspace{-0.2cm}
 \begin{table}[htbp]
 \begin{tabular}{@{} p{0.12\linewidth} p{0.84\linewidth} @{}}
-\href{https://scholar.google.fr/citations?user=9fD2JlYAAAAJ&hl}{Scholar}  & My \hone{full publication list} is available from \href{https://scholar.google.fr/citations?user=9fD2JlYAAAAJ&hl}{Google Scholar}. \\
+\href{https://scholar.google.fr/citations?user=9fD2JlYAAAAJ&hl}{Scholar}  & My \hone{full publication list} is available from \href{https://scholar.google.fr/citations?user=9fD2JlYAAAAJ&hl}{Google Scholar} and \href{https://orcid.org/0000-0003-2149-6706
+}{ORCID}. \\
 \end{tabular}
 \end{table}
 
@@ -116,21 +117,21 @@ and fluids at interfaces}}}
 \vspace{-0.2cm}
 \begin{table}[htbp]
 \begin{tabular}{@{} p{0.12\linewidth} p{0.84\linewidth} @{}}
-2024  & \hone{JCJC project} (ANR) \\
+2024-2028  & \hone{ANR MicroSep} (JCJC) \\
 & Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, Grenoble, France \\
 & \textit{{\color{blue_1}Polymères microporeux pour la séparation de mixtures fluides : connecter les échelles moléculaire et
 macroscopiques}} \\
-& Duration of 4 years, research budget of 330000 \euro{}\\
+& Total budget of $330000~$\euro{}\\
 \hline \hline
-2023  & \hone{\textit{Marie Skłodowska-Curie Actions}} fellowship (MSCA) \\
+2023-2025  & \hone{\textit{Marie Skłodowska-Curie Actions} fellowship} (MSCA) \\
 & Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, Grenoble, France \\
 & \textit{{\color{blue_1}Hybrid nanoporous materials for the separation of fluid mixtures}} \\
-& Duration of 2 years, research budget of 24000 \euro{}\\
+& Full salary + research budget of $24000~$\euro{}\\
 \hline \hline
-2017  & Postdoctoral fellowship \hone{FONDECYT-CONICYT} \\
+2017-2019  & \hone{Postdoctoral fellowship} (FONDECYT-CONICYT) \\
 & Universidad Adolfo Ibáñez, Viña del Mar, Chili \\
 & \textit{{\color{blue_1}A biomimetic membrane with highly asymmetric water transport properties}} \\
-& Duration of 3 years, research budget of 15000 \euro{} \\
+& Full salary + research budget of $15000~$\euro{} \\
 \end{tabular}
 \end{table}
 
