--- a/files/resume/resume-simon-gravelle.tex
+++ b/files/resume/resume-simon-gravelle.tex
@@ -41,9 +41,10 @@ and fluids at interfaces}}}
 & Univ. Grenoble Alpes, CNRS, LIPhy, Grenoble, France \\
 & \textit{{\color{blue_1}Nanoconfined fluids, soft matter, and molecular simulations}} \\
 & Team: Statistical Physics and Modeling (PSM) \\
-& \hspace{0.2cm} $\bullet$ Starting October 2024: lead PI of the ANR project MicroSep \\
-& \hspace{0.2cm} $\bullet$ Since January 2024: in charge of organizing LIPhy's internal seminars \\
-& \hspace{0.2cm} $\bullet$ Since April 2024: co-supervision of Pablo Grisanti, PhD candidate \\
+& \hspace{0.2cm} $\bullet$ Starting February 2024: co-investigator of the ANR project MIAM-CO2 lead by Elise Lorenceau, \\
+& \hspace{0.2cm} $\bullet$ Starting October 2024: lead PI of the ANR project MicroSep, \\
+& \hspace{0.2cm} $\bullet$ Since January 2024: in charge of organizing LIPhy's internal seminars, \\
+& \hspace{0.2cm} $\bullet$ Since April 2024: co-supervision of Pablo Grisanti, PhD candidate. \\
 
 \hline \hline
 2023-2025  & \hone{MSCA Fellow} \\
