--- a/static/files/resume/resume-simon-gravelle.tex
+++ b/static/files/resume/resume-simon-gravelle.tex
@@ -41,10 +41,10 @@ and fluids at interfaces}}}
 & Univ. Grenoble Alpes, CNRS, LIPhy, Grenoble, France \\
 & \textit{{\color{blue_1}Nanoconfined fluids, soft matter, and molecular simulations}} \\
 & Team: Statistical Physics and Modeling (PSM) \\
-& \hspace{0.2cm} $\bullet$ Starting February 2025: co-investigator of the ANR project MIAM-CO2 lead by Elise Lorenceau (LIPhy), \\
-& \hspace{0.2cm} $\bullet$ Starting February 2025: lead PI of the ANR project MicroSep, \\
-& \hspace{0.2cm} $\bullet$ Since January 2024: in charge of organizing LIPhy's internal seminars, \\
-& \hspace{0.2cm} $\bullet$ Since April 2024: co-supervision of Pablo Grisanti, PhD candidate. \\
+& \hspace{0.2cm} $\bullet$ Starting Feb. 2025: co-investigator of the ANR MIAM-CO2 (Elise Lorenceau), \\
+& \hspace{0.2cm} $\bullet$ Starting Feb. 2025: lead PI of the ANR project MicroSep, \\
+& \hspace{0.2cm} $\bullet$ Since Jan. 2024: in charge of organizing LIPhy's internal seminars, \\
+& \hspace{0.2cm} $\bullet$ Since Apr. 2024: co-supervision of Pablo Grisanti, PhD candidate. \\
 
 \hline \hline
 2023-2025  & \hone{MSCA Fellow} \\
@@ -118,7 +118,7 @@ and fluids at interfaces}}}
 \vspace{-0.2cm}
 \begin{table}[htbp]
 \begin{tabular}{@{} p{0.12\linewidth} p{0.84\linewidth} @{}}
-2024-2028  & \hone{ANR MicroSep} (JCJC) \\
+2025-2029  & \hone{ANR MicroSep} (JCJC) \\
 & Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, Grenoble, France \\
 & \textit{{\color{blue_1}Polymères microporeux pour la séparation de mixtures fluides : connecter les échelles moléculaire et
 macroscopiques}} \\
@@ -246,6 +246,9 @@ Other & Outreach, Open science, Tutoring, Video production \\
 \begin{table}[h!]
 \begin{tabular}{@{} p{0.13\linewidth} p{0.84\linewidth} @{}}
 \hline \hline
+11/2024 &  \hone{Invited seminar}, PHENIX, Paris, France  \\ % the 19th
+& \textit{\color{blue_1}Probing NMR relaxation in nanoconfined fluids using intermittent molecular dynamics} \\ 
+\hline \hline
 02/2024 &  \hone{Modeling workshop in Cermav}, Grenoble, France  \\ % the 23th
 & \textit{\color{blue_1}Modelling fluid transport in porous materials: connecting nanoscale and macroscale} \\ 
 \hline \hline
@@ -288,6 +291,26 @@ Washington, États-Unis \\
 05/2018  & \hone{Séminaire invité,} LIPhy, Grenoble, France \\ 
 & \textit{\color{blue_1}Nanofluidics : a theoretical and numerical investigation of fluid transport in
 nanochannels} \\
+\end{tabular}
+\end{table}
+
+\newpage
+
+\vspace{0.5cm}
+~
+\vspace{0.5cm}
+
+\noindent\begin{minipage}{0.147\linewidth}
+{\color{gray120}\rule{\textwidth}{0.22cm}\relax}
+\end{minipage}
+\begin{minipage}{0.82\linewidth}
+{\textcolor{gray120}{\huge Presentations (following)}}
+\end{minipage}
+
+\vspace{-0.2cm}
+
+\begin{table}[h!]
+\begin{tabular}{@{} p{0.13\linewidth} p{0.84\linewidth} @{}}
 \hline \hline
 04/2016  & \hone{Séminaire invité,} Universidad Adolfo Ibáñez, Viña del Mar, Chili \\ 
 & \textit{\color{blue_1}Optimizing water permeability through the hourglass shape of aquaporins : From
@@ -300,12 +323,6 @@ nanochannels} \\
 12/2014  & \hone{Computer Simulation of Combined Fluids,} Londres, Royaume-Uni \\ 
 & \textit{\color{blue_1}Optimizing water permeability through the hourglass shape of aquaporins : From
 hydrodynamics to single-file transport} \\
-
-\end{tabular}
-\end{table}
-\begin{table}[h!]
-\begin{tabular}{@{} p{0.13\linewidth} p{0.84\linewidth} @{}}
-
 \hline \hline
 10/2014  & \hone{GdR Liquides aux interfaces,} Bordeaux, France \\ 
 & \textit{\color{blue_1}Pink noise of ionic current, theory and modelisation} \\
@@ -323,10 +340,6 @@ Pennsylvanie, États-Unis \\
 \end{table}
 
 \newpage
-
-\vspace{0.35cm}
-~
-\vspace{0.35cm}
 
 \noindent\begin{minipage}{0.147\linewidth}
 {\color{gray120}\rule{\textwidth}{0.22cm}\relax}
@@ -365,6 +378,9 @@ Pennsylvanie, États-Unis \\
 \begin{table}[htbp]
 \begin{tabular}{@{} p{0.13\linewidth} p{0.84\linewidth} @{}}
 \vspace{-0.3cm}
+Starting 2025 & Institut universitaire de technologie (IUT) de Grenoble, Grenoble , France \\
+& Practical work in materials science for 1st year students \\ 
+\hline \hline
 2021-23 & University of Stuttgart, Stuttgart, Allemagne \\
 & Design and supervision of practical assignments for Master's students\\
 & 128 h in total, 2 students per group \\
