--- a/files/resume/resume-simon-gravelle.tex
+++ b/files/resume/resume-simon-gravelle.tex
@@ -162,7 +162,7 @@ relaxation $T_1$ and $T_2$ from molecular simulations \\
 & & \href{https://nmrformd.readthedocs.io}{{\color{gray120}https://nmrformd.readthedocs.io}}\\
 \hline \hline
 \href{https://github.com/simongravelle}{~[3]} & 
-\hone{Compte Github} &
+\hone{Github account} &
 FAIR$^{\,1}$ sharing of scripts and simulation data \\
 & & \textit{\color{blue_1} Systematic sharing of research data maximizes the visibility
 of my work and ensures the re-productivity of results} \\
@@ -220,9 +220,9 @@ Code &  Python, Octave - data analysis and software development \\
 \begin{tabular}{@{} p{0.12\linewidth} p{0.84\linewidth} @{}}
       Fields & Nanofluidics, Soft matter, Fluid at interfaces, Biomimetics, Statistical physics \\
 \hline \hline
-Phénomènes & Fluid transport, Adsorption, Collective effects, Input effects, Nuclear magnetic relaxation \\ 
+Phenomena & Fluid transport, Adsorption, Collective effects, Input effects, Nuclear magnetic relaxation \\ 
 \hline \hline
-Other & Outreach, Open science, Tutoring, Video production \\
+Others & Outreach, Open science, Tutoring, Video production \\
 \end{tabular}
 \end{table}
 
