--- a/files/resume/resume-simon-gravelle.tex
+++ b/files/resume/resume-simon-gravelle.tex
@@ -45,12 +45,6 @@ and fluids at interfaces}}}
 & \hspace{0.2cm} $\bullet$ Starting Feb. 2025: lead PI of the ANR project MicroSep, \\
 & \hspace{0.2cm} $\bullet$ Since Jan. 2024: in charge of organizing LIPhy's internal seminars, \\
 & \hspace{0.2cm} $\bullet$ Since Apr. 2024: co-supervision of Pablo Grisanti, PhD candidate. \\
-
-\hline \hline
-2023-2025  & \hone{MSCA Fellow} \\
-& Univ. Grenoble Alpes, CNRS, LIPhy, Grenoble, France \\
-& \textit{{\color{blue_1}Hybrid nanoporous materials for fluid mixture separation}} \\
-& Group leader: CNRS DR Benoit Coasne \\
 \end{tabular}
 \end{table}
 
@@ -65,6 +59,11 @@ and fluids at interfaces}}}
 \vspace{-0.2cm}
 \begin{table}[htbp]
 \begin{tabular}{@{} p{0.12\linewidth} p{0.84\linewidth} @{}}
+2023-2025  & \hone{MSCA Fellow} \\
+& Univ. Grenoble Alpes, CNRS, LIPhy, Grenoble, France \\
+& \textit{{\color{blue_1}Hybrid nanoporous materials for fluid mixture separation}} \\
+& Group leader: CNRS DR Benoit Coasne \\
+    \hline \hline
 2021-2023  & Postdoctoral Researcher \\
 & Institute for Computational Physics, Universität Stuttgart, \hone{Stuttgart, Allemagne} \\
 & \textit{{\color{blue_1}NMR properties of water at the interfaces of porous salt crusts }} \\
@@ -122,17 +121,22 @@ and fluids at interfaces}}}
 & Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, Grenoble, France \\
 & \textit{{\color{blue_1}Polymères microporeux pour la séparation de mixtures fluides : connecter les échelles moléculaire et
 macroscopiques}} \\
-& Total budget of $330000~$\euro{}\\
+% & Total budget of $330000~$\euro{}\\
+\hline \hline
+2025-2029  & \hone{ANR Miam-CO2} (Project lead by Elise Lorenceau) \\
+& Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, Grenoble, France \\
+& \textit{{\color{blue_1}Microalgae-foam reactors for CO2 capture and conversion}} \\
+% & Total budget of $330000~$\euro{}\\
 \hline \hline
 2023-2025  & \hone{\textit{Marie Skłodowska-Curie Actions} fellowship} (MSCA) \\
 & Laboratoire Interdisciplinaire de Physique, Université Grenoble Alpes, Grenoble, France \\
 & \textit{{\color{blue_1}Hybrid nanoporous materials for the separation of fluid mixtures}} \\
-& Full salary + research budget of $24000~$\euro{}\\
+% & Full salary + research budget of $24000~$\euro{}\\
 \hline \hline
 2017-2019  & \hone{Postdoctoral fellowship} (FONDECYT-CONICYT) \\
 & Universidad Adolfo Ibáñez, Viña del Mar, Chili \\
 & \textit{{\color{blue_1}A biomimetic membrane with highly asymmetric water transport properties}} \\
-& Full salary + research budget of $15000~$\euro{} \\
+% & Full salary + research budget of $15000~$\euro{} \\
 \end{tabular}
 \end{table}
 
@@ -142,7 +146,7 @@ macroscopiques}} \\
 {\color{gray120}\rule{\textwidth}{0.22cm}\relax}
 \end{minipage}
 \begin{minipage}{0.82\linewidth}
-{\textcolor{gray120}{\huge Open science projects}}
+{\textcolor{gray120}{\huge Outreach projects}}
 \end{minipage}
 
 \begin{table}[htbp]
@@ -245,6 +249,9 @@ Others & Outreach, Open science, Tutoring, Video production \\
 
 \begin{table}[h!]
 \begin{tabular}{@{} p{0.13\linewidth} p{0.84\linewidth} @{}}
+    \hline \hline
+03/2025 & \hone{The first Tamtam meeting}, Aussois, France \\ % the 28th
+& \textit{\color{blue_1}Upscaling: Connecting molecular simulations to the real world} \\ 
 \hline \hline
 11/2024 &  \hone{Invited seminar}, PHENIX, Paris, France  \\ % the 19th
 & \textit{\color{blue_1}Probing NMR relaxation in nanoconfined fluids using intermittent molecular dynamics} \\ 
